caproto/v1.2.0/_sources/generated/caproto.server.PvpropertyChar.rst.txt
caproto.server.PvpropertyChar
=============================


.. currentmodule:: caproto.server

.. inheritance-diagram:: PvpropertyChar

.. autoclass:: PvpropertyChar

    .. if not using autodoc, add this here: automethod:: __init__

    

    

    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~PvpropertyChar.auth_read
       ~PvpropertyChar.auth_write
       ~PvpropertyChar.calculate_length
       ~PvpropertyChar.check_access
       ~PvpropertyChar.get_field
       ~PvpropertyChar.is_compatible_array
       ~PvpropertyChar.post_state_change
       ~PvpropertyChar.pre_state_change
       ~PvpropertyChar.preprocess_value
       ~PvpropertyChar.publish
       ~PvpropertyChar.read
       ~PvpropertyChar.subscribe
       ~PvpropertyChar.unsubscribe
       ~PvpropertyChar.update_fields
       ~PvpropertyChar.verify_value
       ~PvpropertyChar.write
       ~PvpropertyChar.write_from_dbr
       ~PvpropertyChar.write_metadata
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~PvpropertyChar.alarm
       ~PvpropertyChar.data_type
       ~PvpropertyChar.default_value
       ~PvpropertyChar.epics_timestamp
       ~PvpropertyChar.length
       ~PvpropertyChar.long_string_max_length
       ~PvpropertyChar.max_length
       ~PvpropertyChar.severity
       ~PvpropertyChar.status
       ~PvpropertyChar.timestamp
       ~PvpropertyChar.value
       ~PvpropertyChar.field_inst
       ~PvpropertyChar.fields
       ~PvpropertyChar.getter
       ~PvpropertyChar.group
       ~PvpropertyChar.log
       ~PvpropertyChar.name
       ~PvpropertyChar.putter
       ~PvpropertyChar.pvname
       ~PvpropertyChar.pvspec
       ~PvpropertyChar.record_type
       ~PvpropertyChar.scan
       ~PvpropertyChar.shutdown
       ~PvpropertyChar.startup
       ~PvpropertyChar.max_subscription_backlog
    

    